[package]
name = "mongo_sync"
version = "0.1.0"
authors = ["WindSoilder <WindSoilder@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"
bson = "1.1.0"
clap = "3.0.0-beta.1"
thiserror = "1.0"
toml = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
