[package]
name = "mongo_sync"
version = "0.1.0"
authors = ["WindSoilder <WindSoilder@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "1.1.1", default-features = false, features = ["sync"] }
bson = "1.1.0"
clap = "3.0.0-beta.1"
thiserror = "1.0"
toml = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.1"
