[package]
name = "mongo_sync"
version = "0.1.0"
authors = ["WindSoilder <WindSoilder@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.2"
mongodb = { version = "1.2.1", default-features = false, features = ["sync"] }
bson = "1.2.2"
clap = "3.0.0-beta.1"
thiserror = "1.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8"
rayon = "1.5.0"
num_cpus = "1.13.0"
tracing = "*"
tracing-subscriber = "0.2.17"